[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-text-splitters>=1.1.2",
    "pypdf>=6.14.0",
    "sentence-transformers>=5.6.0",
]
